[gd_scene load_steps=4 format=3 uid="uid://cilreebesbye1"]

[ext_resource type="Script" path="res://Bloks/action.gd" id="1_7wg3b"]
[ext_resource type="Texture2D" uid="uid://c058hfqyd4d1y" path="res://textures/textures/Blokus_placeholder/action.png" id="2_n1skt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o3quc"]
size = Vector2(512.703, 224.324)

[node name="Action" type="Node2D"]
script = ExtResource("1_7wg3b")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 47)
scale = Vector2(0.37, 0.37)
texture = ExtResource("2_n1skt")

[node name="Area2D" type="Area2D" parent="Sprite2D"]
position = Vector2(2.70268, -129.73)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(2.0504e-05, -14.8649)
shape = SubResource("RectangleShape2D_o3quc")

[connection signal="body_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
